adlibs sync mode added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <select id="sync-mode">
                     <option value="line">Line-by-Line</option>
                     <option value="word">Word-by-Word</option>
+                    <option value="adlib">Adlibs Word-to-Word</option>
                 </select>
             </div>
             <button class="btn-primary" onclick="goToEditor()">Pick Audio</button>
@@ -38,7 +39,7 @@
             <div class="popup-content">
                 <h3>Welcome to LyouRIC</h3>
                 <p>Your minimalist companion for syncing lyrics with precision. Upload your audio, tap to the beat, and download your .lrc file instantly.</p>
-                <p>made with <3 by omi :)</p>
+                <p>made with <3 by <a target="_blank" href="https://www.github.com/hOMie03/" style="color: aqua;">omi</a> :)</p>
                 <button class="btn-primary" onclick="closePopup()">Got it!</button>
             </div>
         </div>
